--- a/views/authviews/index.ejs
+++ b/views/authviews/index.ejs
@@ -16,6 +16,7 @@
         <p>Login or Register with:</p>
 
         <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
+        <a href='/auth/spotify' class = 'btn btn-default'><span class='fa fa-user'></span> Spotify Login </a>
         <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
     </div>
 
